// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`System should call system's emitplatform correctly 1`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "526666666.6666 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly 2`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "526666666.6666 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly 3`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 1`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "526666666.6666 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 2`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "526666666.6666 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "523155555.5533 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 3`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1039359111.1088 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "530130962.9577 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 4`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1548284835.5482 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "537408638.0183 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 5`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2053448955.2854 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "545006561.7877 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 6`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2554854992.1301 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "552944154.8230 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 7`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "3052504731.4708 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "561242421.1689 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 8`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "3546398062.0994 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "569924109.5203 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 9`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "4036532796.2869 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "579013894.1861 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 10`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "4522904467.4032 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "588538578.4631 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 11`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "5005506101.7429 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "598527323.8167 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 12`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "5484327960.7963 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "609011908.5899 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 13`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "5959357249.4964 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "620027020.7564 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 14`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "6430577785.2713 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "631610589.8415 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 15`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "6897969621.7540 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "643804164.1854 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 16`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "7361508619.9675 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "656653340.7319 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 17`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "7821165958.4798 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "670208255.8129 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 18`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "8276907572.4326 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "684524147.0934 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 19`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "8728693509.5142 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "699661998.5451 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 20`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "9176477188.5831 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "715689282.7495 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 21`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "9620204543.8878 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "732680817.6314 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 22`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "10059813034.4666 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "750719757.9726 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 23`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "10495230494.0907 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "769898746.3951 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 24`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "10926373792.0720 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "790321253.4738 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 25`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "11353147268.9479 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "812103142.9579 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 26`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "11775440903.2860 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "835374505.8731 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 27`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "12193128156.2225 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "860281816.8699 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 28`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "12606063428.3201 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "886990478.2789 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 29`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "13014079048.3284 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "915687832.2239 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 30`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "13416981694.5069 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "946586740.1720 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 31`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "13814548125.3791 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "979929853.0664 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 32`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "14206520066.6057 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1015994725.3131 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 33`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "14592598062.2247 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1055099964.4141 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 34`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "14972434049.4138 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1097612657.0450 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 35`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "15345622352.8091 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1143957375.6030 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 36`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "15711688713.0021 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1194627150.5500 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 37`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "16070076858.1671 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1250196899.6250 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 38`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "16420131990.0621 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1311339942.6766 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 39`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "16761080375.1580 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1378848411.3607 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 40`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "17092003993.8846 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1453658600.7207 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 41`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "17411808886.0432 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1536882624.5954 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 42`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "17719185410.9623 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1629848156.2696 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 43`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "18012558079.0908 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1734148597.6877 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 44`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "18290021854.7208 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1851706777.5443 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 45`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "18549260803.5770 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1984856304.4681 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 46`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "18787443560.1132 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2136446100.5385 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 47`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "19001088170.1671 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2309975559.4112 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 48`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "19185886214.9200 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2509770423.1249 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 49`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "19336472440.3075 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2741213153.4774 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 50`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "19446120966.4466 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "3011046723.3783 SNAX",
      },
    ],
  },
]
`;

exports[`System should initialize system correctly 1`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "500000000.0000 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "500000000.0000 SNAX",
      },
    ],
  },
]
`;

exports[`System should undelegate snax.team resources correctly 1`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "cpu_weight": "8999999995.5000 SNAX",
        "from": "snax.team",
        "net_weight": "8999999995.5000 SNAX",
        "to": "snax.team",
      },
    ],
  },
]
`;
